--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -148,9 +148,10 @@
             // 2. Invoke saveFiltersToLocalStorage here
             const ele = document.getElementById("duration-select");
             ele.value = event.target.value;
-            
-            console.log("selectDuration -->",filters)
             saveFiltersToLocalStorage(event.target.value)
+            // filters["duration"] = event.target.value
+            // let filteredAdventures = filterFunction(adventures, filters);
+            // addAdventureToDOM(filteredAdventures);
             //console.log(event.target.value.split('-'), ele)
         }
 
@@ -160,8 +161,12 @@
             // 1. Change the DOM to clear the Duration filter. Refer clearCategory() below
             // 2. Invoke saveFiltersToLocalStorage here
             const ele = document.getElementById("duration-select");
-            ele.value = '';
-            saveFiltersToLocalStorage('')
+            ele.value = "";
+            saveFiltersToLocalStorage("")
+            // console.log("selectDuration -->", filters)
+            // filters["duration"] = ''
+            // let filteredAdventures = filterFunction(adventures, filters);
+            // addAdventureToDOM(filteredAdventures);
         }
 
 
@@ -183,7 +188,6 @@
 
             // TODO: MODULE_FILTERS
             // 1. Invoke saveFiltersToLocalStorage here
-            console.log("selectCategory -->", filters)
             saveFiltersToLocalStorage(filters)
 
         }
