ME_QTRIPDYNAMIC_MODULE_ADVENTURE_DETAILS

--- a/frontend/pages/adventures/detail/index.html
+++ b/frontend/pages/adventures/detail/index.html
@@ -123,7 +123,7 @@
             let adventureId = await getAdventureIdFromURL(window.location.search);
             let adventureDetails = await fetchAdventureDetails(adventureId);
             addAdventureDetailsToDOM(adventureDetails);
-            addBootstrapPhotoGallery(adventureDetails.images);
+            addBootstrapPhotoGallery(adventureDetails?.images);
             conditionalRenderingOfReservationPanel(adventureDetails);
             captureFormSubmit(adventureDetails);
             showBannerIfAlreadyReserved(adventureDetails);
