--- a/frontend/pages/adventures/detail/index.html
+++ b/frontend/pages/adventures/detail/index.html
@@ -58,7 +58,7 @@
                             <a href="../../../" style="color: orange !important">explore.</a>
                         </div>
                         <div id="reservation-panel-available">
-                            <form id="myForm" action="" method="">
+                            <form id="myForm" action="#">
                                 <label>Name</label>
                                 <input type="text" class="form-control" name="name" required />
                                 <br />
@@ -125,7 +125,7 @@
             addAdventureDetailsToDOM(adventureDetails);
             addBootstrapPhotoGallery(adventureDetails?.images);
             conditionalRenderingOfReservationPanel(adventureDetails);
-            captureFormSubmit(adventureDetails);
+            //captureFormSubmit(adventureDetails);
             showBannerIfAlreadyReserved(adventureDetails);
             function onPersonsChange(event) {
                 calculateReservationCostAndUpdateDOM(
