ME_QTRIPDYNAMIC_MODULE_RESERVATIONS

--- a/frontend/pages/adventures/detail/index.html
+++ b/frontend/pages/adventures/detail/index.html
@@ -125,7 +125,7 @@
             addAdventureDetailsToDOM(adventureDetails);
             addBootstrapPhotoGallery(adventureDetails?.images);
             conditionalRenderingOfReservationPanel(adventureDetails);
-            //captureFormSubmit(adventureDetails);
+            captureFormSubmit(adventureDetails);
             showBannerIfAlreadyReserved(adventureDetails);
             function onPersonsChange(event) {
                 calculateReservationCostAndUpdateDOM(
